--- a/ecommerce/src/App.css
+++ b/ecommerce/src/App.css
@@ -13,8 +13,8 @@
   border-radius: 8px;
   font-style: italic;
   display: block;
-  border-color: darkblue;
   font-size: 20px;
+  border-color: black;
 }
 
 .product-card img{
@@ -26,4 +26,19 @@
   box-shadow: 2px 2px 2px black;
   cursor: pointer;
 }
+
+body{
+  background-image: url(https://images.unsplash.com/photo-1637625854255-d893202554f4?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fHdoaXRlJTIwdGV4dHVyZXxlbnwwfHwwfHx8MA%3D%3D&w=1000&q=80);
+  background-size: cover;
+}
+
+#home{
+  width: 100%;
+  height: 100%;
+  font-style: italic;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 
