--- a/ecommerce/src/App.css
+++ b/ecommerce/src/App.css
@@ -1,38 +1,33 @@
-.product-list{
+.product-list {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
 }
 
-.product-card{
+.product-card {
   border: 1px solid #ccc;
-  width: 200px;
   text-align: center;
   padding: 16px;
   margin: 16px;
   border-radius: 8px;
   font-style: italic;
-  display: block;
-  font-size: 20px;
   border-color: black;
 }
 
-.product-card img{
+.product-card img {
   max-width: 100%;
   margin-bottom: 8px;
 }
-
-.product-card:hover{
-  box-shadow: 2px 2px 2px black;
-  cursor: pointer;
+.product-card:hover {
+  transition: all 0.5s;
 }
-
-body{
+body {
   background-image: url(https://images.unsplash.com/photo-1637625854255-d893202554f4?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fHdoaXRlJTIwdGV4dHVyZXxlbnwwfHwwfHx8MA%3D%3D&w=1000&q=80);
   background-size: cover;
 }
 
-#home{
+#home {
   width: 100%;
   height: 100%;
   font-style: italic;
@@ -40,5 +35,3 @@ body{
   align-items: center;
   justify-content: center;
 }
-
-
